--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -24,6 +24,6 @@ overrides:
   - filename: '.pre-commit-config.yaml'
     dictionaries:
       - python
-  - filename: 'main.py'
+  - filename: 'log_setup.py'
     ignoreWords:
       - levelname
